--- a/MaterialSkinExample/MaterialSkinExample.csproj
+++ b/MaterialSkinExample/MaterialSkinExample.csproj
@@ -134,6 +134,9 @@
   <ItemGroup>
     <None Include="Resources\round_phone_black_24dp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_favorite_border_color_24dp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
