--- a/MaterialSkinExample/MaterialSkinExample.csproj
+++ b/MaterialSkinExample/MaterialSkinExample.csproj
@@ -137,6 +137,12 @@
   <ItemGroup>
     <None Include="Resources\baseline_favorite_border_color_24dp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\keyboard_arrow_up_FILL1_wght400_GRAD0_opsz24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\keyboard_arrow_down_FILL1_wght400_GRAD0_opsz24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
