--- a/MaterialSkin/MaterialSkin.csproj
+++ b/MaterialSkin/MaterialSkin.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Controls\MaterialTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\MaterialNumericUoDown.cs">
+    <Compile Include="Controls\MaterialNumericUpDown.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\MaterialTextBox2.cs">
