--- a/MaterialSkinExample/MaterialSkinExample.csproj
+++ b/MaterialSkinExample/MaterialSkinExample.csproj
@@ -143,6 +143,12 @@
   <ItemGroup>
     <None Include="Resources\keyboard_arrow_down_FILL1_wght400_GRAD0_opsz24.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star_FILL1_wght400_GRAD0_opsz48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star_FILL1_wght400_GRAD0_opsz48_color.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
